完善模型记忆与工具调用功能